resolve bugs